objects/Contractor__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account__c</referenceTo>
        <relationshipLabel>契約者</relationshipLabel>
        <relationshipName>Contractors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractDate__c</fullName>
        <label>契約日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>メールアドレス</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ForeignKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>外部キー</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>契約者</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>契約者名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>